Archive2/f4/424f96e9f3e8f3/output
main.cpp:6:1: error: stray '\342' in program
 void f()        { cout << __LINE__ << “\n”;  }
 ^
main.cpp:6:1: error: stray '\200' in program
main.cpp:6:1: error: stray '\234' in program
main.cpp:6:1: error: stray '\' in program
main.cpp:6:1: error: stray '\342' in program
main.cpp:6:1: error: stray '\200' in program
main.cpp:6:1: error: stray '\235' in program
main.cpp:7:1: error: stray '\342' in program
 void f(int)   { cout << __LINE__ << “\n”;  }
 ^
main.cpp:7:1: error: stray '\200' in program
main.cpp:7:1: error: stray '\234' in program
main.cpp:7:1: error: stray '\' in program
main.cpp:7:1: error: stray '\342' in program
main.cpp:7:1: error: stray '\200' in program
main.cpp:7:1: error: stray '\235' in program
main.cpp:8:1: error: stray '\342' in program
 virtual void f(const char* msg)  { cout << msg << “ “ << __LINE__ << “\n”; }
 ^
main.cpp:8:1: error: stray '\200' in program
main.cpp:8:1: error: stray '\234' in program
main.cpp:8:1: error: stray '\342' in program
main.cpp:8:1: error: stray '\200' in program
main.cpp:8:1: error: stray '\234' in program
main.cpp:8:1: error: stray '\342' in program
main.cpp:8:1: error: stray '\200' in program
main.cpp:8:1: error: stray '\234' in program
main.cpp:8:1: error: stray '\' in program
main.cpp:8:1: error: stray '\342' in program
main.cpp:8:1: error: stray '\200' in program
main.cpp:8:1: error: stray '\235' in program
main.cpp:14:1: error: stray '\342' in program
 virtual void f(const char* msg) { cout << msg << “ “ << __LINE__ << “\n”; }
 ^
main.cpp:14:1: error: stray '\200' in program
main.cpp:14:1: error: stray '\234' in program
main.cpp:14:1: error: stray '\342' in program
main.cpp:14:1: error: stray '\200' in program
main.cpp:14:1: error: stray '\234' in program
main.cpp:14:1: error: stray '\342' in program
main.cpp:14:1: error: stray '\200' in program
main.cpp:14:1: error: stray '\234' in program
main.cpp:14:1: error: stray '\' in program
main.cpp:14:1: error: stray '\342' in program
main.cpp:14:1: error: stray '\200' in program
main.cpp:14:1: error: stray '\235' in program
main.cpp:23:6: error: stray '\342' in program
      pA->f(“abc”);
      ^
main.cpp:23:6: error: stray '\200' in program
main.cpp:23:6: error: stray '\234' in program
main.cpp:23:6: error: stray '\342' in program
main.cpp:23:6: error: stray '\200' in program
main.cpp:23:6: error: stray '\235' in program
main.cpp: In member function 'void A::f()':
main.cpp:6:43: error: 'n' was not declared in this scope
 void f()        { cout << __LINE__ << “\n”;  }
                                           ^
main.cpp: In member function 'void A::f(int)':
main.cpp:7:41: error: 'n' was not declared in this scope
 void f(int)   { cout << __LINE__ << “\n”;  }
                                         ^
main.cpp: In member function 'virtual void A::f(const char*)':
main.cpp:8:59: error: expected primary-expression before '<<' token
 virtual void f(const char* msg)  { cout << msg << “ “ << __LINE__ << “\n”; }
                                                           ^
main.cpp:8:78: error: 'n' was not declared in this scope
 virtual void f(const char* msg)  { cout << msg << “ “ << __LINE__ << “\n”; }
                                                                              ^
main.cpp: In member function 'virtual void B::f(const char*)':
main.cpp:14:58: error: expected primary-expression before '<<' token
 virtual void f(const char* msg) { cout << msg << “ “ << __LINE__ << “\n”; }
                                                          ^
main.cpp:14:77: error: 'n' was not declared in this scope
 virtual void f(const char* msg) { cout << msg << “ “ << __LINE__ << “\n”; }
                                                                             ^
main.cpp: In function 'int main()':
main.cpp:20:10: error: no matching function for call to 'B::f()'
      b.f();
          ^
main.cpp:14:14: note: candidate: virtual void B::f(const char*)
 virtual void f(const char* msg) { cout << msg << “ “ << __LINE__ << “\n”; }
              ^
main.cpp:14:14: note:   candidate expects 1 argument, 0 provided
main.cpp:21:11: error: invalid conversion from 'int' to 'const char*' [-fpermissive]
      b.f(3);  
           ^
main.cpp:14:14: note:   initializing argument 1 of 'virtual void B::f(const char*)'
 virtual void f(const char* msg) { cout << msg << “ “ << __LINE__ << “\n”; }
              ^
main.cpp:22:15: error: 'A' is an inaccessible base of 'B'
      A* pA = &b;
               ^
main.cpp:23:15: error: 'abc' was not declared in this scope
      pA->f(“abc”);
               ^
